[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/uglybyte.woff" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/home_dynamicfont.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreenBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0156863, 0.247059, 0.168627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
margin_left = 357.0
margin_top = 690.0
margin_right = 492.0
margin_bottom = 770.0
custom_fonts/font = SubResource( 1 )
text = "PLAY"

[node name="PassButton" type="Button" parent="."]
margin_left = 532.0
margin_top = 690.0
margin_right = 667.0
margin_bottom = 770.0
custom_fonts/font = SubResource( 1 )
text = "PASS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 14.0
margin_right = 141.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 3 )
text = "Home"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 15

[node name="HandRequest" type="HTTPRequest" parent="."]

[node name="PingRequest" type="HTTPRequest" parent="."]

[node name="PlayRequest" type="HTTPRequest" parent="."]

[node name="PassRequest" type="HTTPRequest" parent="."]

[node name="LeaveRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="PassButton" to="." method="_on_PassButton_pressed"]
[connection signal="pressed" from="HomeButton" to="." method="_on_HomeButton_pressed"]
